RM:  Spanish translation
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@41638 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -6,7 +6,7 @@ dashlet.rma.description=Sitio de configuraci\u00f3n de gesti\u00f3n de registros
 
 ## Page titles
 page.rmDocumentLibrary.title=Plan de archivo
-page.rmDocumentLibrary.description=Plan de ficheros de gesti\u00f3n de registros con vista en \u00e1rbol
+page.rmDocumentLibrary.description=Plan de archivo de gesti\u00f3n de registros con vista en \u00e1rbol
 page.rmSearch.title=B\u00fasqueda de registros
 page.rmSearch.description=P\u00e1gina de b\u00fasqueda de gesti\u00f3n de registros
 page.rmSiteDashboard.title=Panel de inicio del sitio de gesti\u00f3n de registros
@@ -51,7 +51,7 @@ label.recordType=Tipo de registro
 label.seriesIdentifier=Identificador de serie de registro
 label.categoryIdentifier=Identificador de categor\u00eda de registro
 label.folderIdentifier=Identificador de carpeta de registro
-label.recordIdentifier=Identificador de registro \u00fanico
+label.recordIdentifier=Identificador \u00fanico de registro
 label.dispositionInstructions=Instrucciones de disposici\u00f3n
 label.dispositionAsOfDate=Disposici\u00f3n a partir de la fecha
 label.physicalSize=Tama\u00f1o f\u00edsico
@@ -59,7 +59,7 @@ label.numberOfCopies=N\u00famero de copias
 label.storageLocation=Ubicaci\u00f3n de almacenamiento
 label.shelf=Estanter\u00eda
 label.file=Fichero
-label.box=Cuadro
+label.box=Caja
 
 ## Common Property Selector
 label.menu.content=Contenido
