--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
@@ -6,8 +6,8 @@ label.record=registro
 label.button-cancel=Cancelar
 button.view-record=Ver registro
 
-label.clear-log-title=\u00bfBorrar registro de auditor\u00edas?
-label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que quiere borrar el registro de auditor\u00edas?
+label.clear-log-title=\u00bfLimpiar registro de auditor\u00edas?
+label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que desea borrar todo el registro de auditor\u00edas?
 label.clearing-log-message=Espere, borrando registro de auditor\u00edas.
 label.cleared-log-message=Registro de auditor\u00edas borrado.
 message.clear-log-fail = Error al borrar registro de auditor\u00edas.
@@ -46,14 +46,14 @@ label.timestamp=Marca de tiempo
 label.user=Usuario
 label.role=Rol
 label.event=Evento
-label.filter-log-title=\u00bfFiltrar log?
-label.filtering-log-message=Filtrando log
+label.filter-log-title=\u00bfFiltrar registro?
+label.filtering-log-message=Filtrando registro
 label.default-filter=Todos los usuarios
-label.pagination=Mostrando las \u00faltimas {0} entradas del log
+label.pagination=Mostrando las \u00faltimas {0} entradas del registro
 label.show-log-for=Mostrar registro para:
 label.all-users=Todos los usuarios
 label.remove-filter=Eliminar filtro
-label.default-message=Haga clic en 'Aplicar' para ver el log de auditor\u00edas
+label.default-message=Haga clic en 'Aplicar' para ver el registro de auditor\u00edas
 
 node.root=Plan de archivo
 title.single=Seleccionar ubicaci\u00f3n del registro de auditor\u00edas
@@ -61,7 +61,7 @@ title.single=Seleccionar ubicaci\u00f3n del registro de auditor\u00edas
 label.header-users=Usuarios
 label.header-entries=N\u00famero de entradas
 label.header-from=Desde
-label.header-to=Para
+label.header-to=Hasta
 label.header-event=Evento
 label.header-property=Propiedad
 
