--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/management.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/management.get_es.properties
@@ -2,7 +2,7 @@ label.title=Gesti\u00f3n de registros
 label.summary=Configuraci\u00f3n del sitio de gesti\u00f3n de registros.
 label.create-site=Crear sitio de gesti\u00f3n de registros
 label.display-site=Sitio de gesti\u00f3n de registros
-label.load-test-data=Cargando datos del test
+label.load-test-data=Cargar datos de ejemplo
 label.user-role-report=Informe de rol de usuario
 label.rm-console=Consola de administraci\u00f3n
 
