--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist.get_es.properties
@@ -9,7 +9,7 @@ menu.select.none=Ninguno
 menu.select.invert=Invertir la selecci\u00f3n
 menu.select.folders=Carpetas
 menu.select.records=Registros
-menu.select.undeclared-records=Registros desdeclarados
+menu.select.undeclared-records=Registros no declarados
 
 ## Metadata Fields
 # Generic
@@ -30,13 +30,13 @@ details.category.vital-record-indicator=Indicador de registro vital
 details.folder.identifier=Identificador de carpeta de registro
 details.folder.vital-record-indicator=Indicador de registro vital
 # Record
-details.record.identifier=Identificador de registro \u00fanico
+details.record.identifier=Identificador \u00fanico de registro
 details.record.date-filed=Fecha de archivamiento
 details.record.publication-date=Fecha de publicaci\u00f3n
 details.record.originator=Creador
 details.record.originating-organization=Organizaci\u00f3n creadora
 # Undeclared Record
-details.undeclared-record.info=Registro desdeclarado
+details.undeclared-record.info=Registro no declarado
 # Transfer Container
 details.transfer-container.title=Transferir {0}
 details.transfer-container.is-accession=<em>Nota:</em> El tipo de transferencia es acceso al NARA
@@ -48,7 +48,7 @@ details.hold-container.reason.none=No disponible
 
 ## Pop-up Messages
 # General
-message.loading=Cargando el plan de ficheros\u2026
+message.loading=Cargando el plan de archivo\u2026
 message.error=No se ha podido acceder al plan de archivo
 message.empty=No hay elementos
 
