--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_es.properties
@@ -25,8 +25,8 @@ label.and=y
 label.automatic.true=Autom\u00e1tico
 label.automatic.false=Manual
 
-relation.option.or=El evento anterior
-relation.option.and=Cuando hayan tenido lugar todos los eventos
+relation.option.or=Alguno de los eventos anteriores
+relation.option.and=Todos los eventos anteriores
 
 button.addevent=Nuevo
 button.createevent=Crear evento
