--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_es.properties
@@ -6,7 +6,7 @@ message.finish-failure=No se pudieron actualizar los permisos: {0}
 
 label.title=Administrar permisos: {0}
 label.inherit=Heredar permisos
-label.readonly=De solo lectura
+label.readonly=Solo lectura
 label.readandfile=Leer y archivar
 label.inherited=heredado
 label.local=local
