--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
@@ -15,7 +15,7 @@ message.deletesearch.failure=No se pudo eliminar la b\u00fasqueda.
 label.searchtitle=Buscar
 label.searchterm=Texto de consulta
 label.records=Registros
-label.undeclared=Desdeclarado
+label.undeclared=No declarado
 label.criteria=Criterios
 label.results=Resultados
 label.insertfield=Insertar campo
