--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_es.properties
@@ -3,8 +3,8 @@ header.multiUpload=A\u00f1adir fichero(s)
 header.singleUpdate=Actualizar fichero
 header.singleImport=Importar
 
-section.recordType=Escoger tipo de registro
-section.file=Escoger archivo(s)
+section.recordType=Seleccionar tipo de registro
+section.file=Seleccionar archivo(s)
 
 label.browse=Seleccione el fichero que desea a\u00f1adir
 label.multiUploadTip=Utilice CTRL o SHIFT para seleccionar m\u00faltiples ficheros
@@ -29,6 +29,6 @@ label.comments=Comentarios
 label.contentType=Tipo de contenido
 type.cm_content=Contenido
 
-label.recordType=Tipo(s) de registros.
-label.recordType.description=Nota: Todos los ficheros listados se marcar\u00e1n como del tipo o tipos indicado(s).
+label.recordType=Tipo(s) de registro.
+label.recordType.description=Nota: Todos los ficheros del listado se marcar\u00e1n como el tipo o tipos indicado(s).
 recordType.default=Predeterminado
