--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-file-to.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-file-to.get_es.properties
@@ -2,7 +2,7 @@
 header=Elegir carpeta de destino
 
 ## Copy To
-copy.node.root=Plan de ficheros
+copy.node.root=Plan de archivo
 copy.title.single=Copiar {0} a...
 copy.title.multi=Copiar {0} elementos a...
 copy.button=Copiar
@@ -12,7 +12,7 @@ copy.message.success={0} elementos copiados con \u00e9xito
 copy.message.failure=No se ha podido completar la operaci\u00f3n de copia
 
 ## Move To
-move.node.root=Plan de ficheros
+move.node.root=Plan de archivo
 move.title.single=Mover {0} a...
 move.title.multi=Mover {0} elementos a...
 move.button=Mover
@@ -22,7 +22,7 @@ move.message.success={0} elementos movidos con \u00e9xito
 move.message.failure=No se ha podido completar la operaci\u00f3n de mover a
 
 ## File To
-file.node.root=Plan de ficheros
+file.node.root=Plan de archivo
 file.title.single=Archivar {0} a...
 file.title.multi=Archivar {0} elementos a...
 file.button=Fichero
