RM-575 (Rename 'file' action in file plan to 'link')
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@45382 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -28,12 +28,12 @@ page.rmRecordSeriesDetails.description=P\u00e1gina de detalles de series de regi
 page.rmRecordCategoryDetails.title=Detalles de categor\u00edas de registros
 page.rmRecordCategoryDetails.description=P\u00e1gina de detalles de categor\u00edas para la gesti\u00f3n de registros
 page.rmRecordFolderDetails.title=Detalles de carpeta de registros
-page.rmRecordFolderDetails.description=P\u00e1gina de detalles de carpeta de registros para la gesti\u00f3n de registros 
+page.rmRecordFolderDetails.description=P\u00e1gina de detalles de carpeta de registros para la gesti\u00f3n de registros
 
 ## Forms
 label.set.idStatus=Identificaci\u00f3n y estado
 label.set.general=General
-label.set.record=Registro  
+label.set.record=Registro
 label.set.scannedRecord=Registro escaneado
 label.set.photoRecord=Registro fotogr\u00e1fico
 label.set.webRecord=Registro web
@@ -95,13 +95,13 @@ path.fileplan=Plan de archivo
 
 ## File Plan Actions
 actions.more=M\u00e1s...
-actions.accession=Acceso  
+actions.accession=Acceso
 actions.close-folder=Cerrar carpeta
 actions.copy-to=Copiar a...
 actions.cutoff=Interrumpir
 actions.declare=Declarar como registro
 actions.delete=Eliminar
-actions.destroy=Anular  
+actions.destroy=Anular
 actions.download=Descargar
 actions.download-zip=Descargar Zip
 actions.edit-details=Editar metadatos
@@ -110,8 +110,8 @@ actions.edit-disposition-schedule=Editar planificaci\u00f3n de disposiciones
 actions.edit-reason=Editar detalles de bloqueo
 actions.edit-review-as-of-date=Editar fecha de revisi\u00f3n
 actions.file-report=Archivar informe
-actions.file-to=Archivar en\u2026
-actions.freeze=Bloquear  
+actions.link-to=Archivar en\u2026
+actions.freeze=Bloquear
 actions.manage-permissions=Administrar permisos
 actions.move-to=Mover a...
 actions.open-folder=Reabrir carpeta
@@ -120,7 +120,7 @@ actions.review-all=Revisar todo
 actions.reviewed=Revisado
 actions.add-record-metadata=A\u00f1adir metadatos de registro
 actions.split-email=Separar adjuntos de correo electr\u00f3nico
-actions.transfer=Transferir 
+actions.transfer=Transferir
 actions.transfer-complete=Completar transferencia
 actions.undeclare=Deshacer declaraci\u00f3n de registro
 actions.undo-cutoff=Deshacer interrupci\u00f3n
@@ -249,11 +249,11 @@ label.dod.documentSecuritySettings=Configuraci\u00f3n de seguridad del documento
 label.dod.caption=T\u00edtulo
 label.dod.photographer=Fot\u00f3grafo
 label.dod.copyright=Copyright
-label.dod.bitDepth=Profundidad de bit  
+label.dod.bitDepth=Profundidad de bit
 label.dod.imageSizeX=Tama\u00f1o de imagen X
 label.dod.imageSizeY=Tama\u00f1o de imagen Y
 label.dod.imageSource=Procedencia de la imagen
-label.dod.compression=Compresi\u00f3n 
+label.dod.compression=Compresi\u00f3n
 label.dod.iccIcmProfile=Perfil ICC/ICM
 label.dod.exifInformation=Informaci\u00f3n EXIF
 label.dod.webFileName=Nombre del fichero web
