--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get_es.properties
@@ -32,8 +32,8 @@ menu.selected-items.cutoff=Interrumpir
 menu.selected-items.delete=Eliminar
 menu.selected-items.destroy=Anular
 menu.selected-items.export=Exportar
-menu.selected-items.file-to=Archivar a\u2026
-menu.selected-items.freeze=Fijar  
+menu.selected-items.link-to=Archivar a\u2026
+menu.selected-items.freeze=Fijar
 menu.selected-items.move-to=Mover a...
 menu.selected-items.reviewed=Revisado
 menu.selected-items.transfer=Transferir
