--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-to.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-to.get_es.properties
@@ -21,12 +21,12 @@ move.message.please-wait=Moviendo ficheros...
 move.message.success={0} elementos movidos con \u00e9xito
 move.message.failure=No se ha podido completar la operaci\u00f3n de mover a
 
-## File To
-file.node.root=Plan de ficheros
-file.title.single=Archivar {0} a...
-file.title.multi=Archivar {0} elementos a...
-file.button=Fichero
-file.message.no-files=Debe proporcionarse al menos un fichero
-file.message.please-wait=Archivando ficheros...
-file.message.success={0} elementos archivados con \u00e9xito.
-file.message.failure=No se ha podido completar la operaci\u00f3n de archivar a
+## Link To
+link.node.root=Plan de ficheros
+link.title.single=Archivar {0} a...
+link.title.multi=Archivar {0} elementos a...
+link.button=Fichero
+link.message.no-files=Debe proporcionarse al menos un fichero
+link.message.please-wait=Archivando ficheros...
+link.message.success={0} elementos archivados con \u00e9xito.
+link.message.failure=No se ha podido completar la operaci\u00f3n de archivar a
