RM-668 (Move RM 2.1 onto 4.2.d)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@49376 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/renderers/i18n/RMVitalRecordIndicator.properties
+++ b/rm-share/source/web/js/alfresco/renderers/i18n/RMVitalRecordIndicator.properties
@@ -1,3 +1,3 @@
-details.category.vital-record-indicator=Vital Record Indicator: {0}
+details.category.vital-record-indicator=Vital Record Indicator
 label.yes=Yes
 label.no=No
