RM: Updated es property bundles.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@55514 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_es.properties
@@ -1,7 +1,7 @@
 label.title=Registro de auditor\u00edas
-label.title-for=Registro de adutor\u00edas para {0}
+label.title-for=Registro de auditor\u00edas para {0}
 label.from=Desde
-label.to=Para
+label.to=Hasta
 
 label.yes=S\u00ed
 label.no=No
@@ -9,24 +9,24 @@ label.button-cancel=Cancelar
 button.view-record=Ver registro
 
 label.clear-log-title=\u00bfBorrar registro de auditor\u00edas?
-label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que quiere borrar el registro de auditor\u00edas?
+label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que desea borrar el registro de auditor\u00edas?
 label.clearing-log-message=Espere, borrando registro de auditor\u00edas.
 label.cleared-log-message=Registro de auditor\u00edas borrado.
-message.clear-log-fail = Error al borrar registro de auditor\u00edas.
+message.clear-log-fail = Error al borrar el registro de auditor\u00edas.
 
 label.stopped-at=Registro de auditor\u00edas detenido en {0}
 label.stop-log-title=\u00bfDetener registro de auditor\u00edas?
 label.stop-log-confirmation=\u00bfEst\u00e1 seguro de que quiere detener el registro de auditor\u00edas?
 label.stopping-log-message=Espere, deteniendo registro de auditor\u00edas.
 label.stopped-log-message=Registro de auditor\u00edas detenido.
-message.stop-log-fail = Error al detener registro de auditor\u00edas
+message.stop-log-fail = Error al detener el registro de auditor\u00edas.
 
 label.started-at=Registro de auditor\u00edas iniciado en {0}
 label.start-log-title=\u00bfIniciar registro de auditor\u00edas?
 label.start-log-confirmation=\u00bfEst\u00e1 seguro de que quiere iniciar el registro de auditor\u00edas?
 label.starting-log-message=Espere, iniciando registro de auditor\u00edas.
 label.started-log-message=Registro de auditor\u00edas iniciado.
-message.start-log-fail = Error al iniciar registro de auditor\u00edas
+message.start-log-fail = Error al iniciar registro de auditor\u00edas.
 
 label.button-clear=Borrar
 label.button-stop=Detener
@@ -38,7 +38,7 @@ label.button-file-record=Archivar como registro
 
 label.filed-log-message=El registro de auditor\u00edas se ha archivado como registro.
 message.file-log-fail=Error al archivar auditor\u00eda como registro.
-label.file-record=Registrar fichero
+label.file-record=Archivar registro
 
 
 label.timestamp=Marca de tiempo
@@ -53,5 +53,5 @@ label.all=Todos
 label.identifier=Identificador
 label.no-previous=<ninguno>
 
-node.root=Plan de archivo
+node.root=Plan de ficheros
 title.single=Seleccionar ubicaci\u00f3n del registro de auditor\u00edas
