--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
@@ -2,33 +2,33 @@ label.header-title=Auditor\u00eda
 
 label.yes=S\u00ed
 label.no=No
-label.record=registro
+label.record=Registro
 label.button-cancel=Cancelar
 button.view-record=Ver registro
 
 label.clear-log-title=\u00bfBorrar registro de auditor\u00edas?
-label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que quiere borrar el registro de auditor\u00edas?
+label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que desea borrar el registro de auditor\u00edas?
 label.clearing-log-message=Espere, borrando registro de auditor\u00edas.
 label.cleared-log-message=Registro de auditor\u00edas borrado.
-message.clear-log-fail = Error al borrar registro de auditor\u00edas.
+message.clear-log-fail = Error al borrar el registro de auditor\u00edas.
 
 label.stopped-at=Registro de auditor\u00edas detenido en {0}
 label.stop-log-title=\u00bfDetener registro de auditor\u00edas?
 label.stop-log-confirmation=\u00bfEst\u00e1 seguro de que quiere detener el registro de auditor\u00edas?
 label.stopping-log-message=Espere, deteniendo registro de auditor\u00edas.
 label.stopped-log-message=Registro de auditor\u00edas detenido.
-message.stop-log-fail = Error al detener registro de auditor\u00edas
+message.stop-log-fail = Error al detener el registro de auditor\u00edas.
 
 label.started-at=Registro de auditor\u00edas iniciado en {0}
 label.start-log-title=\u00bfIniciar registro de auditor\u00edas?
 label.start-log-confirmation=\u00bfEst\u00e1 seguro de que quiere iniciar el registro de auditor\u00edas?
 label.starting-log-message=Espere, iniciando registro de auditor\u00edas.
 label.started-log-message=Registro de auditor\u00edas iniciado.
-message.start-log-fail = Error al iniciar registro de auditor\u00edas
+message.start-log-fail = Error al iniciar registro de auditor\u00edas.
 message.select-from-date=Seleccionar desde la fecha
 message.select-to-date=Seleccionar hasta la fecha
 
-label.button-clear=Limpiar
+label.button-clear=Borrar
 label.button-stop=Detener
 label.button-start=Iniciar
 label.button-view-log=Ver registro completo
@@ -38,30 +38,30 @@ label.button-file-record=Archivar como registro
 label.button-apply=Aplicar
 label.button-details=Detalles
 
-label.filed-log-message=Registro de auditor\u00edas archivado como registro.
+label.filed-log-message=El registro de auditor\u00edas se ha archivado como registro.
 message.filing-log-fail=Error al archivar auditor\u00eda como registro.
-label.file-record=Registro de fichero
+label.file-record=Archivar registro
 
 label.timestamp=Marca de tiempo
 label.user=Usuario
 label.role=Rol
 label.event=Evento
-label.filter-log-title=\u00bfFiltrar log?
-label.filtering-log-message=Filtrando log
+label.filter-log-title=\u00bfFiltrar registro?
+label.filtering-log-message=Filtrando registro
 label.default-filter=Todos los usuarios
-label.pagination=Mostrando las \u00faltimas {0} entradas del log
+label.pagination=Mostrando las \u00faltimas {0} entradas del registro
 label.show-log-for=Mostrar registro para:
 label.all-users=Todos los usuarios
 label.remove-filter=Eliminar filtro
-label.default-message=Haga clic en 'Aplicar' para ver el log de auditor\u00edas
+label.default-message=Haga clic en 'Aplicar' para ver el registro de auditor\u00edas
 
-node.root=Plan de archivo
+node.root=Plan de ficheros
 title.single=Seleccionar ubicaci\u00f3n del registro de auditor\u00edas
 
 label.header-users=Usuarios
 label.header-entries=N\u00famero de entradas
 label.header-from=Desde
-label.header-to=Para
+label.header-to=Hasta
 label.header-event=Evento
 label.header-property=Propiedad
 
