--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_es.properties
@@ -6,16 +6,23 @@ label.custom-metadata=Metadatos personalizados
 label.selection-list=Lista de selecci\u00f3n
 label.label=Etiqueta
 label.use-list=Usar lista de selecci\u00f3n
-label.mandatory=Campo obligatorio
+label.mandatory=Obligatorio
 
 label.datatype.unknown=Desconocido
 label.datatype.text=Texto
-label.datatype.boolean=Buleano
+label.datatype.boolean=Booleano
 label.datatype.date=Fecha
 
-message.getpropertiesfail=Error al recuperar definiciones de propiedad personalizada.
+message.getpropertiesfail=No se pudieron recuperar las definiciones de propiedad personalizada.
 message.noproperties=No se han definido propiedades personalizadas.
 message.create-success=Nueva propiedad personalizada a\u00f1adida.
-message.create-failure=Error al a\u00f1adir nueva propiedad personalizada: {0}
-message.edit-success=Propiedad personalizada guardada con \u00e9xito.
-message.edit-failure=Error al guardar propiedad personalizada: {0}
+message.create-failure=No se pudo a\u00f1adir una nueva propiedad personalizada: {0}
+message.edit-success=Propiedad personalizada guardada correctamente.
+message.edit-failure=No se pudo guardar la propiedad personalizada: {0}
+message.delete.title=Eliminar propiedad personalizada
+message.delete.text=\u00bfEst\u00e1 seguro de que quiere eliminar: {0}?
+message.delete-success=Propiedad personalizada eliminada correctamente.
+message.delete-failure=No se pudo eliminar la propiedad personalizada: {0}
+
+mandatory.true=Verdadero
+mandatory.false=Falso
