--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_es.properties
@@ -1,11 +1,11 @@
-message.get-roles-failure=Error al recuperar roles de usuario: {0}
-message.get-role-failure=Error al recuperar capacidades del rol: {0}
-message.delete.success=Rol eliminado con \u00e9xito.
-message.delete.failure=Error al eliminar el rol.
-message.edit-success=Rol actualizado con \u00e9xito.
-message.edit-failure=Error al actualizar el rol.
-message.create-success=Rol creado con \u00e9xito.
-message.create-failure=Error al crear el rol.
+message.get-roles-failure=No se pudieron recuperar los roles de usuario: {0}
+message.get-role-failure=No se pudieron recuperar las capacidades del role: {0}
+message.delete.success=Rol eliminado correctamente.
+message.delete.failure=No se pudo eliminar el rol.
+message.edit-success=Rol actualizado correctamente.
+message.edit-failure=No se pudo actualizar el rol.
+message.create-success=Rol creado correctamente.
+message.create-failure=No se pudo crear el rol.
 
 label.roles=Roles
 label.select-all=Seleccionar todo
