--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_es.properties
@@ -1,6 +1,7 @@
 ## Title
-header.fileplan=Plan de archivo
+header.fileplan=Plan de ficheros
 
 ## Filters
 label.transfers=Transferencias
 label.holds=Bloqueos
+label.unfiledRecords=Registros no archivados
