--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_es.properties
@@ -1,10 +1,10 @@
 header.action=Pasos
 header.period=Duraci\u00f3n
 header.events=Eventos
-header.event=Evento 
+header.event=Evento
 header.completion=Eventos completados
 
-label.required.fields=Campos requeridos
+label.required.fields=Campos necesarios
 label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} despu\u00e9s de {1} {2}(s)
@@ -16,8 +16,8 @@ label.when=Cuando tenga lugar el evento
 label.description=Descripci\u00f3n de paso
 label.select.location=Seleccionar ubicaci\u00f3n\u2026
 
-icon.editaction=Editar acci\u00f3n
-icon.deleteaction=Eliminar acci\u00f3n
+icon.editaction=Editar
+icon.deleteaction=Eliminar
 icon.deleteevent=Eliminar evento
 
 label.or=o
@@ -25,21 +25,21 @@ label.and=y
 label.automatic.true=Autom\u00e1tico
 label.automatic.false=Manual
 
-relation.option.or=El evento anterior
-relation.option.and=Cuando hayan tenido lugar todos los eventos
+relation.option.or=Alguno de los eventos anteriores
+relation.option.and=Cuando han ocurrido todos los eventos
 
-button.addevent=Nuevo
+button.addevent=A\u00f1adir evento
 button.createevent=Crear evento
 button.addaction=A\u00f1adir paso
 button.createaction=A\u00f1adir paso
 
-message.getActionFailure=No se pudo obtener la planificaci\u00f3n de disposici\u00f3n
+message.getActionFailure=No se puede obtener la planificaci\u00f3n de la disposici\u00f3n
 message.savingAction=Guardando paso
-message.saveActionFailure=No se ha podido guardar el paso
+message.saveActionFailure=No se pudo guardar el paso
 title.deleteAction=Eliminar
-label.confirmDeleteAction=\u00bfEst\u00e1 seguro de que quiere eliminar este paso?
+label.confirmDeleteAction=\u00bfEst\u00e1 seguro de que desea eliminar este paso?
 message.deletingAction=Eliminando paso
-message.deleteActionSuccess=Paso eliminado con \u00e9xito
-message.deleteActionFailure=No se ha podido eliminar el paso
+message.deleteActionSuccess=Paso eliminado correctamente
+message.deleteActionFailure=No se pudo eliminar el paso
 message.loadingSteps=Cargando pasos\u2026
-message.noSteps=No existen pasos, haga clic en 'A\u00f1adir paso' para crear uno.
+message.noSteps=No existe ning\u00fan paso. Haga clic en A\u00f1adir paso para crear uno.
