--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_es.properties
@@ -1,10 +1,10 @@
-label.title=Administrar referencias: {0}
+label.title=Gestionar referencias: {0}
 label.edit=Editar
 label.delete=Eliminar
 label.done=Hecho
 label.new-reference=Nueva referencia
 label.no-references=Sin referencias
-message.delete.fail=Error al eliminar referencia
+message.delete.fail=No se pudo eliminar la referencia
 message.delete.success=Referencia eliminada
 label.references-from=Referencias de otros registros
 label.references-to=Referencias a otros registros
