--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
@@ -7,15 +7,15 @@ message.errorexport=Error al exportar resultados de b\u00fasqueda.
 message.selectdate=Seleccionar fecha
 
 
-message.deletesearch.title=Eliminar fecha
+message.deletesearch.title=Eliminar b\u00fasqueda
 message.deletesearch.description=\u00bfEst\u00e1 seguro de que quiere eliminar la b\u00fasqueda ''{0}''?
-message.deletesearch.success=B\u00fasqueda eliminada con \u00e9xito.
+message.deletesearch.success=B\u00fasqueda eliminada correctamente.
 message.deletesearch.failure=No se pudo eliminar la b\u00fasqueda.
 
 label.searchtitle=Buscar
 label.searchterm=Texto de consulta
 label.records=Registros
-label.undeclared=Desdeclarado
+label.undeclared=Incompleto
 label.criteria=Criterios
 label.results=Resultados
 label.insertfield=Insertar campo
@@ -46,14 +46,14 @@ label.recordFolders=Carpetas de registros
 label.recordCategories=Categor\u00edas de registros
 label.recordSeries=Serie de registros
 label.parentFolder=Carpeta padre
-label.frozen=Fijado
+label.frozen=Congelado
 label.cutoff=Interrumpir
 
 # RMA search model metadata fields
 label.dispositionEvents=Eventos de disposici\u00f3n
 label.dispositionActionName=Nombre de acci\u00f3n de disposici\u00f3n
-label.dispositionActionAsOf=Acci\u00f3n de disposici\u00f3n a partir de la fecha
-label.dispositionEventsEligible=Eventos de disposici\u00f3n elegibles
+label.dispositionActionAsOf=Fecha de inicio de acci\u00f3n de disposici\u00f3n
+label.dispositionEventsEligible=Eventos de disposici\u00f3n que re\u00fanen los requisitos
 label.vitalRecordReviewPeriod=Per\u00edodo de revisi\u00f3n de registro vital
 label.hasDispositionSchedule=Tiene planificaci\u00f3n de disposici\u00f3n
 label.dispositionPeriod=Per\u00edodo de disposici\u00f3n
