--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_es.properties
@@ -3,13 +3,13 @@ header=Elegir carpeta de destino
 
 ## Copy To
 copy.node.root=Plan de ficheros
-copy.title.single=Copiar {0} a...
-copy.title.multi=Copiar {0} elementos a...
+copy.title.single=Copiar {0} en...
+copy.title.multi=Copiar {0} elementos en...
 copy.button=Copiar
 copy.message.no-files=Debe proporcionarse al menos un fichero
-copy.message.please-wait=Copia de ficheros en curso...
-copy.message.success={0} elementos copiados con \u00e9xito
-copy.message.failure=No se ha podido completar la operaci\u00f3n de copia
+copy.message.please-wait=Se est\u00e1n copiando ficheros...
+copy.message.success={0} elementos copiados correctamente
+copy.message.failure=No se pudieron copiar los eventos
 
 ## Move To
 move.node.root=Plan de ficheros
@@ -18,15 +18,25 @@ move.title.multi=Mover {0} elementos a...
 move.button=Mover
 move.message.no-files=Debe proporcionarse al menos un fichero
 move.message.please-wait=Moviendo ficheros...
-move.message.success={0} elementos movidos con \u00e9xito
-move.message.failure=No se ha podido completar la operaci\u00f3n de mover a
+move.message.success={0} elementos movidos correctamente
+move.message.failure=No se pudieron copiar los elementos
 
 ## Link To
 link.node.root=Plan de ficheros
-link.title.single=Archivar {0} a...
-link.title.multi=Archivar {0} elementos a...
-link.button=Fichero
+link.title.single=Enlazar {0} a...
+link.title.multi=Enlazar {0} elementos a...
+link.button=Enlace
 link.message.no-files=Debe proporcionarse al menos un fichero
-link.message.please-wait=Archivando ficheros...
-link.message.success={0} elementos archivados con \u00e9xito.
-link.message.failure=No se ha podido completar la operaci\u00f3n de archivar a
+link.message.please-wait=Se est\u00e1n enlazando ficheros...
+link.message.success={0} elementos enlazados correctamente
+link.message.failure=No se pudieron enlazar los elementos
+
+## File To
+file.node.root=Plan de ficheros
+file.title.single=Archivar {0} en...
+file.title.multi=Archivar {0} elementos en...
+file.button=Archivo
+file.message.no-files=Debe proporcionarse al menos un fichero
+file.message.please-wait=Se est\u00e1n archivando ficheros...
+file.message.success={0} elementos archivados correctamente
+file.message.failure=No se pudieron archivar los elementos
