--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get_es.properties
@@ -1,9 +1,9 @@
-header=Elegir la carpeta de registros de destino
+header=Seleccionar la carpeta de registros de destino
 
-node.root=Plan de archivo
-title.single=Transferencia de ficheros {0} informar a...
-button.file=Informe de ficheros
+node.root=Plan de ficheros
+title.single=Informe de transferencia de ficheros {0} en...
+button.file=Informe de fichero
 message.no-files=Debe proporcionarse al menos un fichero
 message.please-wait=Archivando informe de transferencia...
-message.success=Informe de transferencia archivado como {0} con \u00e9xito 
+message.success=Informe de transferencia archivado correctamente como {0} 
 message.failure=No se ha podido completar la operaci\u00f3n de archivado
