--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_es.properties
@@ -10,12 +10,11 @@ button.newevent=Nuevo evento
 
 message.confirm.removeevent.title=Eliminar evento
 message.confirm.removeevent.text=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
-message.removeevent.success=Evento eliminado con \u00e9xito.
-message.removeevent.failure=Error al eliminar evento.
-message.saveevent.saving=Guardando evento\u2026
-message.saveevent.failure=Error al guardar evento.
-message.loadevent.failure=No se han podido cargar los datos del evento.
-message.loadevents.failure=No se han podido cargar los eventos.
+message.removeevent.success=Evento eliminado correctamente.
+message.removeevent.failure=No se pudo eliminar el evento.
+message.saveevent.saving=Guardando evento...
+message.loadevent.failure=No se pudieron cargar datos para el evento.
+message.loadevents.failure=No se pudieron cargar los eventos.
 message.loadevents.loading=Cargando eventos...
 message.empty=No existen eventos.
 message.error=No se han podido cargar los eventos.
