--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_es.properties
@@ -6,7 +6,7 @@ label.general=General
 label.type=Tipo
 label.bidirectional=Bidireccional
 label.label=Etiqueta
-label.parentchild=Padre/hijo
+label.parentchild=Padre/secundario
 label.source=Origen
 label.target=Destino
 
@@ -15,11 +15,10 @@ button.newreference=Nueva relaci\u00f3n
 message.confirm.removereference.title=Eliminar relaci\u00f3n
 message.confirm.removereference.text=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
 message.confirm.removereference.text.parentchild=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}, {1}''?
-message.removereference-success=Referencia eliminada con \u00e9xito.
-message.removereference-failure=Error al eliminar relaci\u00f3n.
+message.removereference-success=Referencia eliminada correctamente.
+message.removereference-failure=No se pudo eliminar la relaci\u00f3n.
 message.savingReference=Guardando relaci\u00f3n\u2026
-message.saveReferenceFailure=Error al guardar relaci\u00f3n.
-message.loadreference-failure=No se han podido cargar los datos de la relaci\u00f3n.
+message.loadreference-failure=No se pudieron cargar datos para la relaci\u00f3n.
 message.loading=Cargando relaciones\u2026
 message.empty=No existen relaciones.
-message.error=No se han podido cargar las relaciones.
+message.error=No se pudieron cargar las relaciones.
