--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-actions.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-actions.get_es.properties
@@ -1,4 +1,4 @@
 heading=Acciones
 
 ## Pop-up Messages
-message.error=No se ha podido acceder al plan de archivo
+message.error=No se pudo acceder al plan de ficheros
