--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_es.properties
@@ -5,7 +5,7 @@ title.actions=Pasos de disposici\u00f3n
 
 label.dispositionAuthority=Autoridad de disposici\u00f3n
 label.dispositionInstructions=Instrucciones de disposici\u00f3n
-label.appliedTo=Aplicado a 
+label.appliedTo=Aplicado a
 label.appliedTo.record=Registro
 label.appliedTo.folder=Carpeta
 label.noactions=La planificaci\u00f3n de disposici\u00f3n no tiene acciones
@@ -18,5 +18,5 @@ link.description=Ver descripci\u00f3n
 
 button.addevent=A\u00f1adir evento
 
-title.noDispositionSchedule=No se ha encontrado planificaci\u00f3n de disposici\u00f3n
+title.noDispositionSchedule=No se ha encontrado ninguna planificaci\u00f3n de disposici\u00f3n
 button.createDispositionSchedule=Crear planificaci\u00f3n de disposici\u00f3n
