--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get_es.properties
@@ -9,12 +9,12 @@ message.revokeEventFailure=No se ha podido revocar el evento
 label.automatic=Autom\u00e1tico
 label.manual=Manual
 label.completedBy=Completado por
-label.completedAt=Completada el
-label.asOf=A partir de la fecha
+label.completedAt=Completado el
+label.asOf=Fecha de inicio
 label.noDispositionSchedule=El ciclo de vida de la disposici\u00f3n no existe.
 label.noEventsInDispositionSchedule=No hay eventos para el paso ''{0}''.
 label.completeDispositionSchedule=Ciclo de vida de la disposici\u00f3n completado.
-label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicado a la carpeta de registro padre, con a partir de la fecha: {0}.
+label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicada a la carpeta de registro padre, con fecha de inicio: {0}.
 label.linkToFoldersDispositionSchedule=Ver eventos de la carpeta padre
-label.loadFailure=No se han podido cargar eventos
+label.loadFailure=No se pudieron cargar los eventos
 button.completeEvent=Completar evento
