--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_es.properties
@@ -2,8 +2,8 @@ label.user=Usuario
 label.dateAndTime=Fecha y hora
 label.parentPath=Ruta
 label.recordSeriesIdentifier=Identificador de serie de registro
-label.recordCategoryIdentifier=Identificador de categor\u00eda de registro
-label.recordFolderIdentifier=Identificador de carpeta de registro
+label.recordCategoryIdentifier=Identificador de categor\u00eda de registros
+label.recordFolderIdentifier=Identificador de carpeta de registros
 label.vitalRecordIndicator=Indicador de registro vital
 label.dispositionAuthority=Autoridad de disposici\u00f3n
 label.noDispositionAuthority=Ninguno
