--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_es.properties
@@ -6,5 +6,5 @@ label.name = Nombre de la referencia
 label.required = Campo requerido
 label.create=Crear
 label.cancel=Cancelar
-label.fileplan= Plan de archivo
-message.createfail=Error al crear nueva referencia
+label.fileplan= Plan de ficheros
+message.createfail=No se pudo crear la referencia
