--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_es.properties
@@ -1,24 +1,25 @@
-header.singleUpload=A\u00f1adir fichero
-header.multiUpload=A\u00f1adir fichero(s)
+header.singleUpload=Subir fichero
+header.multiUpload=Subir fichero(s)
 header.singleUpdate=Actualizar fichero
 header.singleImport=Importar
 
-section.recordType=Escoger tipo de registro
-section.file=Escoger archivo(s)
+section.recordType=Elegir tipo de registro
+section.file=Seleccionar fichero(s)
 
-label.browse=Seleccione el fichero que desea a\u00f1adir
+label.browse=Seleccione los ficheros que desea subir
 label.multiUploadTip=Utilice CTRL o SHIFT para seleccionar m\u00faltiples ficheros
-label.singleUpdateTip=Pulse en el icono para subir una nueva versi\u00f3n de {0}
-label.noFiles=No hay ning\u00fan fichero para mostrar, pulse el icono para seleccionar los ficheros que desea subir
-label.noFlash=Necesita como m\u00ednimo la versi\u00f3n 9.0.45 de Flash Player para utilizar este componente. Puede descargar la \u00faltima versi\u00f3n del visor Flash desde el <a href="http://www.adobe.com/go/getflashplayer">Centro de descargas Adobe Flash Player</a>.
+label.singleUpdateTip=Haga clic en el icono para subir una nueva versi\u00f3n de {0}
+label.noFiles=No hay ning\u00fan fichero para mostrar, haga clic en el icono para seleccionar los ficheros que desea subir
+label.noFlash=Es necesario Flash Player versi\u00f3n 9.0.45 o posterior para usar este componente. Puede descargar la \u00faltima versi\u00f3n de Flash Player desde el \
+  <a href="http://www.adobe.com/go/getflashplayer">Centro de descargas Adobe Flash Player</a>.
 label.success=Completado
 label.failure=Error
-button.upload=A\u00f1adir fichero(s)
-label.uploadStatus=Estado: {0}/{1} subido(s) ({2} err\u00f3neos)
+button.upload=Subir fichero(s)
+label.uploadStatus=Estado: {0}/{1} subido(s) ({2} fallidos)
 message.cancelStatus=Subida(s) cancelada(s); {0} fichero(s) subido(s)
 message.zeroByteFileSelected=Ha seleccionado el fichero {0}. No tiene ning\u00fan contenido y no se puede subir.
 message.flashError.title=Error de comunicaci\u00f3n Flash
-message.flashError.message=El navegador no puede comunicarse con el cargador Flash. Puede continuar archivando ficheros en modo de fichero \u00fanico o recargar la p\u00e1gina para reiniciar Flash.
+message.flashError.message=El navegador no puede comunicarse con el cargador Flash. Puede continuar archivando registros en modo de fichero \u00fanico o actualizar la p\u00e1gina para reiniciar Flash.
 
 section.version=Informaci\u00f3n de la versi\u00f3n
 label.version=Esta versi\u00f3n tiene:
@@ -29,6 +30,6 @@ label.comments=Comentarios
 label.contentType=Tipo de contenido
 type.cm_content=Contenido
 
-label.recordType=Tipo(s) de registros.
-label.recordType.description=Nota: Todos los ficheros listados se marcar\u00e1n como del tipo o tipos indicado(s).
+label.recordType=Tipos de registros
+label.recordType.description=Nota: Todos los ficheros enumerados se marcar\u00e1n como el tipo indicado.
 recordType.default=Predeterminado
