--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
@@ -1,14 +1,15 @@
-header.singleUpload=A\u00f1adir fichero
+header.singleUpload=Subir fichero
 header.singleUpdate=Actualizar fichero
 header.singleImport=Importar
 
 section.recordType=Elegir tipo de registro
 section.file=Seleccionar fichero
 
-label.singleUploadTip=Con la \u00faltima versi\u00f3n instalada de Flash Player, puede subir m\u00faltiples ficheros. Desc\u00e1rguelo del <a href="http://www.adobe.com/go/getflashplayer">Centro de Descargas de Adobe Flash Player</a>.
+label.singleUploadTip=Con la \u00faltima versi\u00f3n instalada de Flash Player, puede subir m\u00faltiples ficheros. \
+  Desc\u00e1rguela del <a href="http://www.adobe.com/go/getflashplayer">Centro de Descargas de Adobe Flash Player</a>.
 
 label.singleUpdateTip=Subir una nueva versi\u00f3n de {0}
-button.upload=A\u00f1adir fichero
+button.upload=Subir fichero
 label.file=Fichero
 
 section.version=Informaci\u00f3n de la versi\u00f3n
@@ -18,11 +19,11 @@ label.majorVersion=Versi\u00f3n mayor
 label.comments=Comentarios
 
 message.uploading=Subiendo el documento...
-message.success=Documento subido con \u00e9xito
+message.success=Documento subido correctamente
 message.failure=No se pudo subir el documento
 
 label.contentType=Tipo de contenido
 type.cm_content=Contenido
 
-label.recordType=Tipo(s) de registros
+label.recordType=Tipos de registros
 recordType.default=Predeterminado
